Remove utoipa
