# backend/src/api.rs
@@ -8,18 +8,10 @@ use axum_valid::Valid;
 use crate::{
     dto::{Project, ProjectIndex, ProjectPreview},
     error::{AppError, AppResult, WithAppRejection},
-    repository::ProjectRepository
-    ,
+    repository::ProjectRepository,
     utils::{Page, Pager},
 };
 
-#[utoipa::path(
-    get,
-    path = "/projects",
-    responses(
-        (status = 200, description = "Comments found successfully", body = Page<ProjectPreview>),
-    ),
-)]
 pub async fn list_projects(
     State(repo): State<ProjectRepository>,
     WithRejection(Valid(Query(pager)), _): WithAppRejection<Valid<Query<Pager<ProjectIndex>>>>,
@@ -28,16 +20,6 @@ pub async fn list_projects(
     Ok(Json(page))
 }
 
-#[utoipa::path(
-    get,
-    path = "/projects/{id}",
-    params(
-        ("id" = String, Path, description = "ID of project to fetch"),
-    ),
-    responses(
-        (status = 200, description = "Project found successfully", body = Project),
-    ),
-)]
 pub async fn get_project(
     Path(id): Path<String>,
     State(project_repo): State<ProjectRepository>,
