# frontend/openapi.json
@@ -14,85 +14,6 @@
     "version": "0.2.0"
   },
   "paths": {
-    "/comments/{comment_id}": {
-      "put": {
-        "operationId": "put_comment",
-        "parameters": [
-          {
-            "name": "comment_id",
-            "in": "path",
-            "description": "ID of comment to update",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "message",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/NewComment"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Comment updated successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CommentWithUser"
-                }
-              }
-            }
-          }
-        }
-      },
-      "delete": {
-        "operationId": "delete_comment",
-        "parameters": [
-          {
-            "name": "comment_id",
-            "in": "path",
-            "description": "ID of comment to delete",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Comment deleted successfully"
-          }
-        }
-      }
-    },
-    "/login": {
-      "get": {
-        "operationId": "login",
-        "responses": {}
-      }
-    },
-    "/logout": {
-      "get": {
-        "operationId": "logout",
-        "responses": {}
-      }
-    },
     "/projects": {
       "get": {
         "operationId": "list_projects",
@@ -103,69 +24,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Page_ProjectPreview"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "operationId": "post_project",
-        "parameters": [
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "content",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "thumbnail-id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "project-url",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": [
-                "string",
-                "null"
-              ]
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/NewProject"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Project posted successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProjectId"
                 }
               }
             }
@@ -199,249 +57,11 @@
             }
           }
         }
-      },
-      "put": {
-        "operationId": "put_project",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of project to update",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "name",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "content",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "thumbnail-id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "project-url",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": [
-                "string",
-                "null"
-              ]
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/NewProject"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Project updated successfully"
-          }
-        }
-      },
-      "delete": {
-        "operationId": "delete_project",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "ID of project to delete",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Project deleted successfully"
-          }
-        }
-      }
-    },
-    "/projects/{project_id}/comments": {
-      "get": {
-        "operationId": "list_comments",
-        "parameters": [
-          {
-            "name": "project_id",
-            "in": "path",
-            "description": "ID of project to list comments for",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Comments found successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/CommentWithUser"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "post": {
-        "operationId": "post_comment",
-        "parameters": [
-          {
-            "name": "project_id",
-            "in": "path",
-            "description": "ID of project to add comment to",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "message",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/x-www-form-urlencoded": {
-              "schema": {
-                "$ref": "#/components/schemas/NewComment"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "200": {
-            "description": "Comment posted successfully",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CommentWithUser"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/uploads": {
-      "post": {
-        "operationId": "post_image",
-        "responses": {}
       }
     }
   },
   "components": {
     "schemas": {
-      "CommentWithUser": {
-        "type": "object",
-        "required": [
-          "id",
-          "userId",
-          "isAdmin",
-          "message",
-          "datePosted"
-        ],
-        "properties": {
-          "datePosted": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "isAdmin": {
-            "type": "boolean"
-          },
-          "message": {
-            "type": "string"
-          },
-          "name": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "userId": {
-            "type": "string",
-            "format": "uuid"
-          }
-        }
-      },
-      "NewComment": {
-        "type": "object",
-        "required": [
-          "message"
-        ],
-        "properties": {
-          "message": {
-            "type": "string"
-          }
-        }
-      },
-      "NewProject": {
-        "type": "object",
-        "required": [
-          "name",
-          "content",
-          "thumbnail-id"
-        ],
-        "properties": {
-          "content": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "project-url": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "thumbnail-id": {
-            "type": "string",
-            "format": "uuid"
-          }
-        }
-      },
       "Page_ProjectPreview": {
         "type": "object",
         "required": [
@@ -518,17 +138,6 @@
           "thumbnailId": {
             "type": "string",
             "format": "uuid"
-          }
-        }
-      },
-      "ProjectId": {
-        "type": "object",
-        "required": [
-          "id"
-        ],
-        "properties": {
-          "id": {
-            "type": "string"
           }
         }
       },
